--- a/lms_app/templates/layout_admin.html
+++ b/lms_app/templates/layout_admin.html
@@ -19,6 +19,11 @@
       type="text/css"
       href="{{ url_for('static', filename='forms.css') }}"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for('static', filename='table.css') }}"
+    />
   </head>
   <body>
     <header class="site_container site__header">
@@ -34,7 +39,7 @@
         </nav>
         <div>
         
-          <button class="btn signup" >Log Out</button>
+          <a class="btn signup" href="{{ url_for('admin_logout') }}">Log Out</a>
           <!-- <a href=""></a> -->
         </div>
       </header>
