--- a/lms_app/templates/client/index.html
+++ b/lms_app/templates/client/index.html
@@ -1,4 +1,4 @@
-{% extends './layouts/layout_user.html' %}
+{% extends 'layout_user.html' %}
 {% block content %}
 <h1>client home</h1>
 {% endblock %}
