--- a/lms_app/templates/client/login.html
+++ b/lms_app/templates/client/login.html
@@ -1,41 +1,40 @@
-{% extends './layouts/layout_user.html' %}
+{% extends 'layout_user.html' %}
 {% block content %}
 
 <section class="form-area align-center">
     <section class="form-section content-dir">
+      <div class="flash-message">
+        {% for message in get_flashed_messages() %} {{ message }} {% endfor %}
+      </div>
       <div class="form-header">
-        <h1 class="header-text">Contact Us</h1>
+        <h1 class="header-text">Login</h1>
       </div>
       <div>
         <form method="POST" class="form-container">
           {{ form.hidden_tag() }}
           <div class="form-element">
-            {{ form.name.label }} {% if form.name.errors %} {{form.name}}
+            {{ form.username.label }} {% if form.username.errors %}
+            {{form.username}}
             <div class="invalid-feedback">
-              {% for error in form.name.errors %}
+              {% for error in form.username.errors %}
               <span>{{ error }}</span>
               {% endfor %}
             </div>
-            {% else %} {{ form.name }} {% endif %}
+            {% else %} {{ form.username }} {% endif %}
           </div>
           <div class="form-element">
-            {{ form.email.label }} {% if form.email.errors %} {{form.email}}
+            {{ form.password.label }} {% if form.password.errors %}
+            {{form.password}}
             <div class="invalid-feedback">
-              {% for error in form.email.errors %}
+              {% for error in form.password.errors %}
               <span>{{ error }}</span>
               {% endfor %}
             </div>
-            {% else %} {{ form.email }} {% endif %}
+            {% else %} {{ form.password }} {% endif %}
           </div>
-  
+          </div>
           <div class="form-element">
-            {{ form.message.label }} {% if form.message.errors %} {{form.message}}
-            <div class="invalid-feedback">
-              {% for error in form.message.errors %}
-              <span>{{ error }}</span>
-              {% endfor %}
-            </div>
-            {% else %} {{ form.message }} {% endif %}
+            <p>Don't have account?<a href="{{ url_for('signup') }}" class="active"> Create Account</a></p>
           </div>
   
           <div class="button-element">
@@ -45,4 +44,6 @@
       </div>
     </section>
   </section>
+
+
 {% endblock %}
