--- a/lms_app/templates/layout_user.html
+++ b/lms_app/templates/layout_user.html
@@ -37,6 +37,11 @@
           <li>
             <a class="nav__anc" href="{{ url_for('contact') }}">Contact</a>
           </li>
+          <li>
+            <a class="nav__anc" href="{{ url_for('admin_acc_request') }}"
+              >Account Request</a
+            >
+          </li>
         </ul>
       </nav>
       <div>
