3-way login and data display for admin is done

--- a/lms_app/templates/admin/view_approved_admin.html
+++ b/lms_app/templates/admin/view_approved_admin.html
@@ -11,7 +11,7 @@
     </tr>
   </thead>
   <tbody>
-    {% for users in user %}
+    {% for users in users %}
     <tr>
       <td>{{ users.id }}</td>
       <td>{{ users.username }}</td>
