--- a/lms_app/static/table.css
+++ b/lms_app/static/table.css
@@ -1,7 +1,7 @@
 table {
     border-collapse: collapse;
     width: 100%;
-    max-width: 800px;
+    /* max-width: 900px; */
     margin: 20px auto;
   }
 
