--- a/lms_app/templates/layout_admin.html
+++ b/lms_app/templates/layout_admin.html
@@ -27,22 +27,29 @@
   </head>
   <body>
     <header class="site_container site__header">
-        <nav class="site_navigation">
-          <div class="LOGO">ADMIN</div>
-          <ul>
-            <li><a class="nav__anc" href="#">Users</a></li>
-            <li><a class="nav__anc" href="#">Courses</a></li>
-            <li><a class="nav__anc" href="#">FormsResponse</a></li>
-            <li><a class="nav__anc" href="#">Staff</a></li>
-            <li><a class="nav__anc" href="#">Others</a></li>
-          </ul>
-        </nav>
-        <div>
-        
-          <a class="btn signup" href="{{ url_for('admin_logout') }}">Log Out</a>
-          <!-- <a href=""></a> -->
-        </div>
-      </header>
+      <nav class="site_navigation">
+        <div class="LOGO">ADMIN</div>
+        <ul>
+          <li>
+            <a class="nav__anc" href="{{ url_for('admin_view_users') }}"
+              >Users</a
+            >
+          </li>
+          <li><a class="nav__anc" href="#">Courses</a></li>
+          <li>
+            <a class="nav__anc" href="{{ url_for('admin_view_contact') }}"
+              >FormsResponse</a
+            >
+          </li>
+          <li><a class="nav__anc" href="#">Staff</a></li>
+          <li><a class="nav__anc" href="#">Others</a></li>
+        </ul>
+      </nav>
+      <div>
+        <a class="btn signup" href="{{ url_for('admin_logout') }}">Log Out</a>
+        <!-- <a href=""></a> -->
+      </div>
+    </header>
     <div class="site_container">{% block content %} {% endblock %}</div>
   </body>
 </html>
