--- a/lms_app/templates/layout_user_PA.html
+++ b/lms_app/templates/layout_user_PA.html
@@ -31,7 +31,7 @@
       </nav>
       <div>
         <!-- <button class="btn signup" >Log Out</button> -->
-        <a class="btn signup" href="{{ url_for('logout') }}">Log Out</a>
+        <a class="btn signup" href="{{ url_for('user.logout') }}">Log Out</a>
       </div>
     </header>
     <div class="site_container">{% block content %} {% endblock %}</div>
