--- a/lms_app/templates/login/signup.html
+++ b/lms_app/templates/login/signup.html
@@ -53,7 +53,7 @@
         <div class="form-element">
           <p>
             Already have account?<a
-              href="{{ url_for('login') }}"
+              href="#"
               class="active"
             >
               Login</a
