--- a/lms_app/templates/layout_user_PA.html
+++ b/lms_app/templates/layout_user_PA.html
@@ -23,7 +23,7 @@
   <body>
     <header class="site_container site__header">
       <nav class="site_navigation">
-        <div class="LOGO">CLIENT</div>
+        <div class="LOGO">USER AREA</div>
         <ul>
           <li><a class="nav__anc" href="#">Explore</a></li>
           <li><a class="nav__anc" href="#">Resources</a></li>
@@ -31,9 +31,14 @@
       </nav>
       <div>
         <!-- <button class="btn signup" >Log Out</button> -->
-        <a class="btn signup" href="{{ url_for('user.logout') }}">Log Out</a>
+        <a class="btn signup" href="{{ url_for('logout') }}">Log Out</a>
       </div>
     </header>
-    <div class="site_container">{% block content %} {% endblock %}</div>
+    <div class="site_container">
+      <div class="flash-message" id="flash_msg">
+        {% for message in get_flashed_messages() %} {{ message }} {% endfor %}
+      </div>
+      {% block content %} {% endblock %}
+    </div>
   </body>
 </html>
