--- a/lms_app/templates/layout_user_PA.html
+++ b/lms_app/templates/layout_user_PA.html
@@ -19,6 +19,11 @@
       type="text/css"
       href="{{ url_for('static', filename='forms.css') }}"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{{ url_for('static', filename='create_course.css') }}"
+    />
   </head>
   <body>
     <header class="site_container site__header">
@@ -27,6 +32,7 @@
         <ul>
           <li><a class="nav__anc" href="#">Explore</a></li>
           <li><a class="nav__anc" href="#">Resources</a></li>
+          <li><a class="nav__anc" href="{{ url_for('user_create_course') }}">Create Course</a></li>
         </ul>
       </nav>
       <div>
