--- a/lms_app/templates/create_course/create_course.html
+++ b/lms_app/templates/create_course/create_course.html
@@ -1,56 +1,71 @@
-{% extends 'layout_admin.html' %} {% block content %}
+{% extends 'layout_user_PA.html' %} {% block content %}
 <section class="course-create_title">
-    <h1 class="course-create_title-text">Create Module</h1>
-  </section>
-  <div class="course-create_-container">
-    <div class="module-course_box ">
-      Box 1 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab,
-      excepturi iusto. Laudantium expedita vero in ipsum, quo quia ea nihil.
-      Harum ab, asperiores quos quod perspiciatis porro doloremque autem,
-      distinctio voluptatum mollitia maiores illum magnam aliquam, fugiat
-      expedita odit. Quaerat expedita earum culpa quisquam possimus
-      praesentium iure id laborum, provident eum, incidunt, ipsam officia.
-      Impedit exercitationem quas animi sint ipsa aspernatur porro voluptates
-      inventore quasi obcaecati velit nulla id ad aut quibusdam quidem illum
-      debitis, tempora culpa atque praesentium? Ab quidem omnis, numquam dicta
-      officia unde eveniet deleniti iusto libero recusandae aspernatur. Ipsa
-      quaerat aspernatur facilis accusamus quae suscipit est ex distinctio
-      laboriosam. Ad fuga quis distinctio laudantium, commodi ducimus
-      accusantium nobis alias necessitatibus incidunt similique, doloremque
-      nostrum id omnis reiciendis saepe delectus, repellendus aliquid at
-      asperiores! Repellendus distinctio voluptas illum accusantium inventore
-      quidem, itaque, exercitationem temporibus quam rem alias sequi in dicta
-      provident ducimus ab suscipit quasi a maiores ipsum animi deserunt qui?
-      Esse officia tempore libero autem vero aspernatur ad error optio
-      nesciunt sequi laudantium eligendi quae odit ullam, praesentium cumque
-      quibusdam deserunt consequuntur iste, sed fuga similique! Modi id
-      officiis, accusantium ipsam doloribus vitae quod quaerat. Veniam,
-      laboriosam quisquam. Rerum cumque adipisci quod omnis. Perferendis,
-      tempora rerum.
-    </div>
-    <div class="box right-container_module">
-      <div class="view-module-side">
-        <p class="side_modul-title">itle 01 Module itle 01 Module itle 01</p>
-        <div class="side_module-actions">
-          <a class="side_module_action-link" href="#">Edit</a>
-          <a class="side_module_action-link" href="#">Delete</a>
+  <h1 class="course-create_title-text">Create Course</h1>
+</section>
+<div class="course-create_container">
+  <div class="module-course_box">
+    <div>
+      <form method="POST" class="form-container">
+        {{ form.hidden_tag() }}
+
+        <div class="form-element">
+          {{ form.title.label }} {% if form.title.errors %} {{form.title}}
+          <div class="invalid-feedback">
+            {% for error in form.title.errors %}
+            <span>{{ error }}</span>
+            {% endfor %}
+          </div>
+          {% else %} {{ form.title }} {% endif %}
         </div>
-      </div>
-      <div class="view-module-side">
-        <p class="side_modul-title">itle 01 Module itle 01 Module itle 01</p>
-        <div class="side_module-actions">
-          <a class="side_module_action-link" href="#">Edit</a>
-          <a class="side_module_action-link" href="#">Delete</a>
+        <div class="form-element">
+          {{ form.introduction.label }} {% if form.introduction.errors %}
+          {{form.introduction}}
+          <div class="invalid-feedback">
+            {% for error in form.introduction.errors %}
+            <span>{{ error }}</span>
+            {% endfor %}
+          </div>
+          {% else %} {{ form.introduction }} {% endif %}
         </div>
-      </div>
-      <div class="view-module-side">
-        <p class="side_modul-title">itle 01 Module itle 01 Module itle 01</p>
-        <div class="side_module-actions">
-          <a class="side_module_action-link" href="#">Edit</a>
-          <a class="side_module_action-link" href="#">Delete</a>
+        <div class="form-element">
+          {{ form.description.label }} {% if form.description.errors %}
+          {{form.description}}
+          <div class="invalid-feedback">
+            {% for error in form.description.errors %}
+            <span>{{ error }}</span>
+            {% endfor %}
+          </div>
+          {% else %} {{ form.description }} {% endif %}
         </div>
-      </div>
+
+        <div class="button-element">
+          {{ form.submit(class = "buttonForm") }}
+        </div>
+      </form>
     </div>
   </div>
+  <div class="box right-container_module">
+    <h3>Instructions</h3>
+    <ul class="course_instructions-container">
+      <li class="instructions">
+        Try to write a precise title. title plays an important role in ranking
+        our course on first page
+      </li>
+      <li class="instructions">
+        Introduce your course in introduction section. This willbe visible
+        onfront page after title and course video. It is high chance that
+        student enrols a course after just learning it's introduction
+      </li>
+      <li class="instructions">
+        Describe every thing about your course in description section
+      </li>
+    </ul>
+    <ul class="course_instructions-container">
+      <li class="red_instructions">
+        Your course will be rejected if it is not able to deliver value to students
+      </li>
+    </ul>
+  </div>
+</div>
 
 {% endblock %}
