--- a/lms_app/static/forms.css
+++ b/lms_app/static/forms.css
@@ -89,11 +89,11 @@ span {
 
 textarea{
     line-height: 1.5;
-    resize: vertical;
+    /* resize: vertical; */
 }
 
 
-input, textarea {
+input, textarea,select {
     width: 100%;
     padding: 6px 5px;
     font-size: 16px;
